Refactor language logic and add UI partiels

--- a/documentation/modules/ROOT/nav.adoc
+++ b/documentation/modules/ROOT/nav.adoc
@@ -1,7 +1,7 @@
-* xref:chaos-design.adoc[1. Design Chaos experiments]
-* xref:chaos-environment.adoc[2. Get your Chaos environment]
-* xref:chaos-explore.adoc[3. Explore the Application]
-* xref:chaos-metrics.adoc[4. Define and monitor Chaos metrics]
-* xref:chaos-latency.adoc[5. Chaos Experiment 1: Network latency]
-* xref:chaos-error.adoc[6. Chaos Experiment 2: Unavailable Service]
+* xref:chaos-design.adoc[1. Conception des expériences Chaos]
+* xref:chaos-environment.adoc[2. Obtenez votre environnement Chaos]
+* xref:chaos-explore.adoc[3. Explorer l'application]
+* xref:chaos-metrics.adoc[4. Définir et surveiller les paramètres de Chaos]
+* xref:chaos-latency.adoc[5. Expérience Chaos 1: Latence du réseau]
+* xref:chaos-error.adoc[6. Expérience Chaos 2: Service non disponible]
 * xref:faq.adoc[7. FAQ]
