--- a/documentation/modules/ROOT/pages/chaos-error.adoc
+++ b/documentation/modules/ROOT/pages/chaos-error.adoc
@@ -8,34 +8,34 @@
 :GRAFANA_URL: https://grafana-istio-system.%APPS_HOSTNAME_SUFFIX%
 :GITOPS_URL: https://argocd-server-argocd.%APPS_HOSTNAME_SUFFIX%
 
-= Chaos Experiment 2: Unavailable Service
+= Expérience des chaos 2: Service non disponible
 
-_10 MINUTE PRACTICE_
+_10 MINUTES D'ENTRAÎNEMENT_
 
-Previously, you have seen how big the impact is on the application when a small network latency problem occurs on one non-critital services.
-Let's see how the application will occur when this same service is unavailable. For this second experiment, we will test the following hypothesis:
+Auparavant, vous avez vu l'ampleur de l'impact sur l'application lorsqu'un petit problème de latence du réseau se produit sur un service non critique.
+Voyons comment l'application se comportera lorsque ce même service sera indisponible. Pour cette deuxième expérience, nous allons tester l'hypothèse suivante:
 
-_**Unavailable 'discount' service should NOT impact the Service Level Objective (SLO) of the Travel Service**_
+_**L'indisponibilité d'un service de « remise » ne doit PAS avoir d'incidence sur l'objectif de niveau de service (SLO) du service de voyage**_
 
-== Define the steady state
+==  Définir l'état stable
 
-Like in the previous lab, we will keep the same steady state 
+Comme dans le laboratoire précédent, nous garderons le même état stable
 
-**99% of requests are successful and served within 50 ms** 
+**99% des demandes sont satisfaites et servies dans les 50 ms**
 
 image::grafana-service-overview-configured-2.png[Grafana - Service Overview Configured,700]
 
-We will be able to see how a different type of failure of the same service could impact the behaviour of our application.
+Nous pourrons voir comment un autre type de défaillance du même service pourrait avoir un impact sur le comportement de notre application.
 
-== Run the Chaos experiment
+==  Exécutez l'expérience Chaos
 
-In the {KIALI_URL}[Kiali Console^, role='params-link'], from the **'Graph' view**, `*right-click on the 'discounts' service and select 'Details'*`
+Dans le {KIALI_URL}[Kiali Console^, role='params-link'], de la vue **'Graph'**, `*clic droit sur le service 'discounts' et sélectionnez 'Details'*`
 
 image::kiali-right-click-service.png[Kiali - Right Click Service,400]
 
-You will be redirected to the Service Details page. 
+Vous serez redirigé vers la page détails du service.
 
-`*Click on the 'Actions' > 'Fault Injection'*`
+`*Cliquez sur les 'Actions' 'Fault Injection'*`
 
 image::kiali-add-fault-injection.png[Kiali - Add Fault Injection,900]
 
@@ -68,23 +68,23 @@ image::kiali-add-fault-injection.png[Kiali - Add Fault Injection,900]
 
 image::kiali-configure-error.png[Kiali - Configure Error,300]
 
-`*Click on the 'Update' button*`. 
+`*Cliquez sur le bouton « Mise à jour »*`.
 
-**10% of the traffic of the 'discounts' service is failing with a 503 HTTP code**. Now let's see the impact of the application.
+**10% du trafic du service 'discounts' échoue avec un code HTTP 503**. Voyons maintenant l'impact de l'application.
 
-== Analyze the Chaos outcome
+==  Analyser le résultat du chaos
 
-In the {GRAFANA_URL}[Chaos Engineering Dashboard], you can see the result of the chaos experiment.
+Dans le {GRAFANA_URL}[Chaos Engineering Dashboard], vous pouvez voir le résultat de l'expérience de chaos.
 
 image::grafana-error-fault-overview.png[Grafana - Error Fault Overview,900]
 
-**All services, except for the 'discounts' service, performs very well without any errors (100% success)**. 
+**Tous les services, à l'exception du service 'discounts', fonctionnent très bien sans erreurs (100% de succès)**.
 
-You can increase the percentage of error injection until making the 'discounts' service completely unavailable. 
+Vous pouvez augmenter le pourcentage d'injection d'erreur jusqu'à ce que le service de « décomptes » soit complètement indisponible.
 
-In the {KIALI_URL}[Kiali Console^, role='params-link'], `*update the HTTP Abort strategy of the 'discounts' service as follows:*`
+Dans le {KIALI_URL}[Kiali Console^, role='params-link'], `*mettre à jour la stratégie HTTP Abort du service 'discounts' comme suit:*`
 
-`*Add HTTP Abort by entering the following settings:*`
+`*Ajouter HTTP Abort en entrant les paramètres suivants:*`
 
 .HTTP Abort Settings
 [%header,cols=3*]
@@ -113,17 +113,17 @@ In the {KIALI_URL}[Kiali Console^, role='params-link'], `*update the HTTP Abort 
 
 image::grafana-error-fault-overview-2.png[Grafana - Error Fault Overview,900]
 
-Contrary to the outcome with the Latency experiment, you tell the application is resilient when the 'discounts' service is completely down (unavailable).
-So your hypothesis is validated:
+Contrairement au résultat de l'expérience de latence, vous indiquez que l'application est résiliente lorsque le service "discounts" est complètement indisponible (indisponible).
+Donc votre hypothèse est validée :
 
-_**Unavailable 'discounts' services DO NOT impact the Service Level Objective (SLO) of the Travel Service**_
+_**Les services de 'remises' non disponibles N'ONT PAS d'incidence sur l'objectif de niveau de service (SLO) du service de voyage**_
 
-== Rollback the Chaos experiment
+== Rollback de l'expérience chaos
 
-In {GITOPS_URL}[Argo CD^, role='params-link'], `*click on 'Sync > Synchronize'*`.
+Dans {GITOPS_URL}[Argo CD^, role='params-link'], `*cliquez sur 'Sync > Synchronize '*`.
 
 image::argocd-rollback-sync.png[Argo CD - Sync Application, 900]
 
-Finally, in the {GRAFANA_URL}[Chaos Engineering Dashboard], `*please check the application is back in the steady state.
+Enfin, dans le {GRAFANA_URL}[Chaos Engineering Dashboard], ` *veuillez vérifier que l'application est de retour dans l'état stable.
 
 image::grafana-steady-state.png[Grafana - Steady State,700]
