--- a/documentation/modules/ROOT/pages/index.adoc
+++ b/documentation/modules/ROOT/pages/index.adoc
@@ -1,4 +1,4 @@
-= Welcome to Chaos Engineering Workshop
+= Bienvenue à l'atelier d'ingénierie de Chaos
 :navtitle: Introduction
 :page-layout: home
 :markup-in-source: verbatim,attributes,quotes
@@ -7,34 +7,33 @@
 
 include::_attributes.adoc[]
 
-== Workshop explanation
-**Abstract** :
+== Explication de l'atelier
+**Résumé** :
 
-Building large-scale and distributed systems is changing the game for modern software engineering. How do our applications behave in the face of failure? This is the crucial challenge we need to solve as failures are inevitable. 
+La construction de systèmes à grande échelle et distribués change le jeu pour l'ingénierie logicielle moderne. Comment nos applications se comportent-elles face à l'échec ? C'est le défi crucial que nous devons résoudre car les échecs sont inévitables.
 
-We have to identify the weaknesses of our systems before they happen in production. 
+Nous devons identifier les faiblesses de nos systèmes avant qu'ils ne se produisent dans une environement de production.
 
-The goal with Chaos Engineering isn't to build tooling to stop issues or to find vulnerabilities. For us it's to push towards a culture of resilience to the unexpected.
+Le but avec Chaos Engineering n'est pas de construire des outils pour arrêter les problèmes ou de trouver des vulnérabilités. Pour nous c'est de pousser vers une culture de résilience à l'imprévu.
 
-Bring your laptop and join us to do your **Chaos Experiment** in order to see how it withstands turbulent conditions in production and to be prepared when it happens. 
+Apportez votre ordinateur portable et rejoignez-nous pour faire votre **Expérience de Chaos**, pour voir comment elle résiste aux conditions turbulentes dans la production et être préparée quand elle se produit.
 
-In this hands-on workshop, attendees will get familiar with the concept of **Chaos Engineering** and will learn how to put it into practice using advanced capabilities of OpenShift like OpenShift Service Mesh.. As a takeaway, attendees will be able to:
+Dans cet atelier pratique, les participants se familiariseront avec le concept de **Chaos Engineering** et apprendront comment le mettre en pratique en utilisant des capacités avancées de OpenShift comme OpenShift Service Mesh. En guise de décollage, les participants pourront :
 
-* Deploying an application using **ArgoCD**
-* Visualize and monitor a distributed system using **Openshift Service Mesh**
-* Define and monitor Chaos metrics using **Grafana** 
-* Bring chaos by injecting failures and latencies through **Kiali's** advanced features
-* Find and fix the weaknesses discovered in the modern patterns used here today
+* Déployer une application en utilisant **ArgoCD**
+* Visualiser et surveiller un système distribué en utilisant **Openshift Service Mesh**
+* Définir et surveiller les paramètres de Chaos en utilisant **Grafana**
+* Apportez le chaos en injectant des échecs et des retards à travers **Kiali's** avancées
+* Trouver et corriger les faiblesses découvertes dans les modèles modernes utilisés ici aujourd’hui
 
 [quote, from Sidney Dekker, David Woods, and Richard Cook]
-____
-Resilience is not about reducing errors. It's about enhancing the positive capabilities of people and organizations that allow them to adapt effectively and safely under pressure.
-____
+Je ne sais pas.
+La résilience ne consiste pas à réduire les erreurs. Il s'agit d'améliorer les capacités positives des personnes et des organisations qui leur permettent de s'adapter efficacement et en toute sécurité sous pression.
+Je ne sais pas.
 
-== Setup and infrastructure used
-The OpenShift environment created for you is running version 4.7 of the OpenShift Container Platform. This deployment is a self-contained environment that provides everything you need to be successful learning the platform. 
-We are using on **Openshift Cluster 4.7** provisioned on RHPDS system in which we installed several operators as pre-requisites for this Workshop : 
+== Équipement et infrastructure utilisés
+L'environnement OpenShift créé pour vous est la version 4.7 de la plate-forme de conteneurs OpenShift. Ce déploiement est un environnement autonome qui fournit tout ce dont vous avez besoin pour apprendre la plateforme.
+Nous utilisons sur **Openshift Cluster 4.7** fourni sur le système RHPDS dans lequel nous avons installé plusieurs opérateurs comme prérequis pour cet atelier :
 
 * https://www.openshift.com/learn/topics/service-mesh[Openshift Service Mesh]
 * https://www.openshift.com/blog/announcing-openshift-gitops[Openshift GitOps]
- 
